--- a/src/app/modules/request-approval/components/request-approval-address/request-approval-address.component.scss
+++ b/src/app/modules/request-approval/components/request-approval-address/request-approval-address.component.scss
@@ -15,5 +15,6 @@
 	word-wrap: normal;
 	font-style: normal;
 	font-size: 14px;
-	line-height: 22px;
+	line-height: 18px;
+	font-feature-settings: 'kern' off;
 }
