--- a/src/app/shared/components/box-cart-price/box-cart-price.component.scss
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.scss
@@ -3,7 +3,7 @@
 
 #div-price-top {
 	background: $color-primary;
-	height: 54px;
+	height: 45px;
 	width: 357px;
 	padding-left: 25px;
 	padding-right: 25px;
@@ -19,17 +19,19 @@
 	padding-left: 25px;
 	padding-right: 25px;
 	padding-top: 16px;
-	padding-bottom: 20px;
+	padding-bottom: 16px;
 	box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
 	border-radius: 0px 0px 8px 8px;
 }
 
 #label-ringkasan {
 	font-family: $primary-font;
+	color: $abu-abu-gelap;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 18px;
-	color: $abu-abu-gelap;
+	line-height: 21px;
+	font-feature-settings: 'kern' off;
 }
 
 #label-below2 {
