--- a/src/app/shared/components/cart-item-list/cart-item-list.component.html
+++ b/src/app/shared/components/cart-item-list/cart-item-list.component.html
@@ -1,11 +1,17 @@
 <div id="item-list"
 	class="d-flex align-items-center">
 
-	<div id="item-image"><img src="{{items.itemImage}}"
-			id="item-image"></div>
+	<div id="item-image">
+		<a (click)="goToDetail()"
+			class="redirectdetail">
+			<img src="{{items.itemImage}}"
+				id="item-image">
+		</a></div>
 
 	<div class="flex-grow-1">
-		<div id="item-list-name">{{items.itemName}}</div>
+		<div id="item-list-name">
+			<a (click)="goToDetail()"
+				class="redirectdetail">{{items.itemName}}</a></div>
 		<div id="item-list-price">{{items.itemPrice}}</div>
 		<div id="item-list-color">
 			<div id="rounded-item-wording">Warna</div>
