--- a/src/app/modules/cart/components/item-list/item-list.component.scss
+++ b/src/app/modules/cart/components/item-list/item-list.component.scss
@@ -25,3 +25,12 @@
 	width: 21px;
 	height: 20.76px;
 }
+
+#item-telah-dihapus {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+
+	color: #ffffff;
+}
