--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,6 +43,14 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .toast {
+}
+
+.pojok-kanan-atas {
+	position: fixed;
+	top: 72px !important;
+	right: 0;
+	margin: 0.5em;
+	z-index: 1200;
 	max-width: 400px;
 	overflow: hidden;
 	background-color: #fdfdfd;
@@ -51,10 +59,19 @@ input[type='number']::-webkit-outer-spin-button {
 	border-radius: 0px 0px 8px 8px;
 }
 
-.ngb-toasts {
-	position: fixed;
-	top: 72px !important;
+.bawah-tengah {
+	position: absolute;
+	width: 366px;
+	height: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
 	right: 0;
-	margin: 0.5em;
+	text-align: center;
+	background: rgba(51, 49, 50, 0.75);
+	border-radius: 20px;
+	position: fixed;
+	bottom: 72px !important;
 	z-index: 1200;
+	color: #ffffff;
 }
