--- a/src/app/modules/detail-product/components/price/price.component.html
+++ b/src/app/modules/detail-product/components/price/price.component.html
@@ -1,20 +1,20 @@
 <div>
-	<div id="product-detail-label">Sweater Merah</div>
-	<wsv wide="29.33px"></wsv>
+	<div id="product-detail-label">Sweater Merah Pria</div>
+	<wsv wide="27px"></wsv>
 	<discount-harga-coret></discount-harga-coret>
-	<wsv wide="50px"></wsv>
+	<wsv wide="34px"></wsv>
 	<info-row title="warna">
 		<warna></warna>
 	</info-row>
-	<wsv wide="18px"></wsv>
+	<wsv wide="15px"></wsv>
 	<info-row title="Berat">
 		<span class="info-row-content">2.400gr</span>
 	</info-row>
-	<wsv wide="18px"></wsv>
+	<wsv wide="15px"></wsv>
 	<info-row title="Stok">&nbsp;&nbsp;
 		<span class="info-row-content">25</span>
 	</info-row>
-	<wsv wide="61px"></wsv>
+	<wsv wide="27px"></wsv>
 	<qty-ctrl notif="true"
 		allowChanges="true"></qty-ctrl>
 </div>
