--- a/src/app/modules/detail-product/components/price/price.component.scss
+++ b/src/app/modules/detail-product/components/price/price.component.scss
@@ -5,7 +5,6 @@
 	font-style: normal;
 	font-weight: 600;
 	font-size: 18px;
-	line-height: 25px;
 	color: $abu-abu-gelap;
 	font-family: $primary-font;
 }
@@ -13,7 +12,7 @@
 .info-row-content {
 	font-family: $primary-font;
 	font-style: normal;
-	font-weight: bold;
-	font-size: 16px;
-	line-height: 19px;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 14px;
 }
