--- a/src/app/shared/components/discount-harga-coret/discount-harga-coret.component.html
+++ b/src/app/shared/components/discount-harga-coret/discount-harga-coret.component.html
@@ -6,5 +6,5 @@
 		class="align-self-center">Rp. 394.900</span>
 </div>
 
-<wsh wide="2.67px"></wsh>
+<wsv wide="3.57px"></wsv>
 <div id="harga-sesudah-diskon">Rp. 325.000</div>
