--- a/src/app/shared/components/qty-ctrl/qty-ctrl.component.scss
+++ b/src/app/shared/components/qty-ctrl/qty-ctrl.component.scss
@@ -8,13 +8,13 @@
 }
 
 #remove_cart_logo {
-	width: 16px;
+	width: 15px;
 	height: 4px;
 }
 
 #add_to_cart_logo {
-	width: 21.6px;
-	height: 21.6px;
+	width: 16px;
+	height: 16px;
 }
 
 .control-wrapper {
@@ -63,8 +63,17 @@
 }
 
 #qty_input {
+	font-family: $secondary-font;
 	width: 120px;
 	text-align: center;
 	background: transparent;
 	font-size: 20px;
+	font-weight: bold;
+}
+
+#horizontal-underline {
+	height: 1px;
+	width: 70%;
+	margin: auto;
+	background-color: $abu-abu-sesuatu;
 }
