--- a/src/app/modules/cart/components/item-list/item-list.component.html
+++ b/src/app/modules/cart/components/item-list/item-list.component.html
@@ -10,11 +10,13 @@
 		<div class="d-flex align-items-center">
 			<check-box-round [checked]="!item.outOfStock"
 				[allowChanges]="!item.outOfStock"></check-box-round>
-			<wsh wide="16px"></wsh>
+			<wsh wide="10px"></wsh>
 			<cart-item-list></cart-item-list>
 		</div>
+		<wsv wide="16px"></wsv>
 		<div class="d-flex align-items-center">
-			<wsh wide="235px"></wsh>
+			<wsh wide="220px"></wsh>
+
 			<qty-ctrl notif="false"
 				[allowChanges]="!item.outOfStock"></qty-ctrl>
 			<wsh wide="250px"></wsh>
