--- a/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
@@ -4,7 +4,7 @@
 		<div id="keranjang-label">KERANJANG</div>
 		<!--<cart-empty></cart-empty>-->
 		<wsv wide="25px"></wsv>
-		<address-section wide="50%"
+		<address-section wide="596px"
 			borderRadius='20px'
 			margin="0px">
 		</address-section>
