--- a/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
@@ -1,24 +1,41 @@
-<div class="container">
-	<div id="div-top-address">
-		<wsv wide="53px"></wsv>
-		<div id="keranjang-label">KERANJANG</div>
-		<!--<cart-empty></cart-empty>-->
-		<wsv wide="25px"></wsv>
-		<address-section wide="596px"
-			borderRadius='20px'
-			margin="0px">
-		</address-section>
-		<wsv wide="30px"></wsv>
+<div class="container d-flex">
+	<div id="left-container">
+		<div id="top-fixed"
+			class="bg-10">
+			<wsv wide="53px"></wsv>
+			<div id="keranjang-label">KERANJANG</div>
+			<wsv wide="25px"></wsv>
+			<address-section wide="596px"
+				borderRadius='20px'
+				margin="0px">
+			</address-section>
+			<wsv wide="30px"></wsv>
+		</div>
+		<wsv wide="200px"></wsv>
+		<div id="poi">
+			<div id="asd">
+				<item-list></item-list>
+			</div>
+		</div>
+
+	</div>
+
+	<div id="right-container">
+		<wsv wide="200px"></wsv>
+		<div id="right-fixed">
+			<div class="d-flex">
+				<wsh wide="57px"></wsh>
+				<box-cart-price buttonLabel="Selanjutnya"></box-cart-price>
+			</div>
+
+		</div>
 	</div>
 
 	<div class="d-flex justify-content-between"
 		id="scrollable-div">
 
-		<div id="div-cart-price">
-			<box-cart-price buttonLabel="Selanjutnya"></box-cart-price>
-			<wsv wide="280px"></wsv>
-		</div>
 
 	</div>
 
-	<item-list></item-list>
+
+</div>
