--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -1,7 +1,35 @@
-<div class="container">
+<div class="container d-flex">
+	<div id="left-container">
+		<div id="top-fixed"
+			class="bg-10">
+			<wsv wide="53px"></wsv>
+			<div id="keranjang-label">REQUEST APPROVAL</div>
+			<wsv wide="25px"></wsv>
+			<request-approval-address></request-approval-address>
+		</div>
+		<wsv wide="240px"></wsv>
+		<div id="poi">
+			<div id="asd">
+				<item-list></item-list>
+			</div>
+		</div>
+	</div>
+	<div id="right-container">
+		<wsv wide="200px"></wsv>
+		<div id="right-fixed">
+			<div class="d-flex">
+				<wsh wide="57px"></wsh>
+				<box-cart-price buttonLabel="Request Approval"></box-cart-price>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+<!-- <div class="container">
 	<div id="div-top-address">
 		<wsv wide="53px"></wsv>
-		<div id="request-approval-label">REQUEST APPROVAL</div>
+		<div id="request-approval-label"></div>
 		<wsv wide="14px"></wsv>
 		<request-approval-address></request-approval-address>
 
@@ -20,4 +48,4 @@
 	</div>
 
 </div>
-<wsv wide="300px"></wsv>
+<wsv wide="300px"></wsv> -->
