--- a/src/app/modules/request-approval/components/item-list/item-list.component.scss
+++ b/src/app/modules/request-approval/components/item-list/item-list.component.scss
@@ -4,8 +4,8 @@
 .white-rounded-corner-item-list-cart {
 	background: $putih-tok;
 	border-radius: 8px;
-	width: 100%;
-	padding: 0px 8px 15px 0px;
+	width: 703px;
+	padding: 14px;
 }
 
 #qty_label {
