--- a/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
+++ b/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
@@ -1,10 +1,47 @@
 <div id="float-foot">
-	<wsv wide="25px"></wsv>
-	<div>
+	<div id="float-foot-wrapper"
+		class="container d-flex 
+	justify-content-between align-items-center">
+
 		<div id="review-foot">Sweater Merah</div>
-		<div id="amount-foot">
-			<div class="right-top-footer">Total</div>
-			<div class="right-bottom-footer">Rp. 718.000</div>
+		<div class="d-flex align-items-center">
+			<div>
+				<div id="total-foot-label">Total</div>
+				<div id="total-foot">Rp. 718.000</div>
+			</div>
+			<wsh wide="26px"></wsh>
+			<div id="tambahkan-button"
+				class="d-flex align-items-center justify-content-center">
+				<img id="cart-logo"
+					src="../../../../../assets/image/icons/add_to_cart_red.png">
+				<wsh wide="4px"></wsh>
+				<div id="tambahkan-label"
+					(click)="tambahkanKeKeranjang()">Tambahkan</div>
+			</div>
+		</div>
+
+
+	</div>
+
+</div>
+
+<ng-template #dangerTpl>
+	<div class="d-flex notif-container justify-content-between align-self-center">
+		<div id="keranjang-label">Keranjang</div>
+		<div id="lihat-keranjang-label"
+			class="text-center">Lihat Keranjang</div>
+	</div>
+	<div id="notif-inner-container">
+		<div class="d-flex justify-content-between align-items-center">
+			<div class="d-flex align-items-center">
+				<img src="https://id.360buyimg.com/Indonesia/s880x0_/nHBfsgAAJAAAAB0AD6waZQACy0M.jpg.dpg.webp"
+					id="notif-img">
+				<div>
+					<div id="item-name">Sweater Merah Pria</div>
+					<div>2 Barang (300gr)</div>
+				</div>
+			</div>
+			<div id="item-price">Rp359.000</div>
 		</div>
 	</div>
-</div>
+</ng-template>
