--- a/src/app/modules/cart/components/item-list/item-list.component.html
+++ b/src/app/modules/cart/components/item-list/item-list.component.html
@@ -13,7 +13,7 @@
 				(click)="item.selected = !item.selected"
 				[allowChanges]="!item.outOfStock"></check-box-round>
 			<wsh wide="10px"></wsh>
-			<cart-item-list></cart-item-list>
+			<cart-item-list redirLink="1"></cart-item-list>
 		</div>
 		<wsv wide="16px"></wsv>
 		<div class="d-flex align-items-center">
