--- a/src/app/shared/components/qty-ctrl/qty-ctrl.component.scss
+++ b/src/app/shared/components/qty-ctrl/qty-ctrl.component.scss
@@ -8,13 +8,13 @@
 }
 
 #remove_cart_logo {
-	width: 15px;
+	width: 11px;
 	height: 4px;
 }
 
 #add_to_cart_logo {
-	width: 16px;
-	height: 16px;
+	width: 11px;
+	height: 11px;
 }
 
 .control-wrapper {
@@ -65,10 +65,15 @@
 #qty_input {
 	font-family: $secondary-font;
 	width: 120px;
-	text-align: center;
 	background: transparent;
-	font-size: 20px;
+	font-style: normal;
 	font-weight: bold;
+	font-size: 16px;
+	line-height: 22px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	color: $abu-abu-gelap;
 }
 
 #horizontal-underline {
