--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -28,8 +28,8 @@
 				<div class="card-deck">
 					<div *ngFor="let subcategory of clickedCategory?.subcategory">
 						<div class="list-sub-kategori"
-							[routerLink]="'/pilih-produk'"
-							(click)="$event.stopPropagation(); myDrop.close()">{{subcategory.name}}</div>
+							(click)="$event.stopPropagation(); myDrop.close();goesToSub(subcategory.name)">
+							{{subcategory.name}}</div>
 					</div>
 				</div>
 
