--- a/src/app/shared/components/pop-up-request-approval/pop-up-request-approval.component.html
+++ b/src/app/shared/components/pop-up-request-approval/pop-up-request-approval.component.html
@@ -28,7 +28,8 @@
 	<div id="popup-option">
 		<div id="popup-option-button-all">
 			<div align="center">
-				<div (click)="goesToPage(modalData.pageDestination)">Ok</div>
+				<div class="divbutton-center"
+					(click)="goesToPage(modalData.pageDestination)">Ok</div>
 			</div>
 		</div>
 	</div>
