--- a/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
+++ b/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
@@ -34,7 +34,7 @@
 				<div class="d-flex justify-content-between align-self-center">
 					<div id="keranjang-label">Keranjang</div>
 					<div id="lihat-keranjang-label"
-						class="text-center">Lihat Keranjang</div>
+						class="d-flex justify-content-center align-items-center">Lihat Keranjang</div>
 				</div>
 				<wsv wide="13px"></wsv>
 
