update request perbaikan

--- a/src/app/modules/detail-product/components/deskripsi-spesifikasi-section/deskripsi-spesifikasi-section.component.html
+++ b/src/app/modules/detail-product/components/deskripsi-spesifikasi-section/deskripsi-spesifikasi-section.component.html
@@ -1,5 +1,6 @@
 <div id="deskripsi-spesifikasi-wrapper">
-	<div class="d-flex">
+	<div class="d-flex"
+		id=deskripsi-tab-wrapper>
 		<div [ngClass]="(selectedTab=='Deskripsi')?'deskrip-spesi-label-selected':'deskrip-spesi-label'"
 			(click)="selectedTab = 'Deskripsi'">Deskripsi</div>
 		<wsh wide="90px"></wsh>
