--- a/src/app/modules/detail-product/components/image-main/image-main.component.html
+++ b/src/app/modules/detail-product/components/image-main/image-main.component.html
@@ -1,5 +1,7 @@
 <div>
-	<div id="image-main">
+	<div id="image-main"
+		[ngStyle]="stylesObj"
+		(click)="openDialogLocation()">
 		<img id="detail-main-image"
 			src="https://s2.bukalapak.com/img/24267287201/large/Cottonology_Wells_Black.jpg">
 	</div>
