--- a/src/app/modules/detail-product/components/deskripsi-spesifikasi-section/deskripsi-spesifikasi-section.component.scss
+++ b/src/app/modules/detail-product/components/deskripsi-spesifikasi-section/deskripsi-spesifikasi-section.component.scss
@@ -10,6 +10,11 @@
 	padding-top: 29px;
 }
 
+#deskripsi-tab-wrapper{
+	border-bottom: 0.5px solid $abu-abu-gelap;
+	padding-bottom: 10px;
+}
+
 .deskrip-spesi-label-selected {
 	font-family: $secondary-font;
 	font-size: 16px;
