--- a/src/app/modules/detail-product/components/image-main/image-main.component.scss
+++ b/src/app/modules/detail-product/components/image-main/image-main.component.scss
@@ -1,4 +1,11 @@
+@import '../../../../../styles/variables/colors';
+@import '../../../../../styles/variables/fonts';
+
 #detail-main-image {
-	height: 328px;
 	width: 328px;
+	height: auto;
+	border: 0.5px solid $abu-abu-sesuatu;
+	box-sizing: border-box;
+	border-radius: 8px;
+	padding: 1px 1px 1px 1px;
 }
