--- a/src/app/shared/components/cart-item-list/cart-item-list.component.scss
+++ b/src/app/shared/components/cart-item-list/cart-item-list.component.scss
@@ -99,7 +99,7 @@
 	border-radius: 50%;
 	border: 0.5px solid #f7f7f7;
 	box-sizing: border-box;
-	cursor: pointer;
+	//cursor: pointer;
 }
 
 #item-list-weight {
