--- a/src/app/modules/detail-product/components/price/price.component.html
+++ b/src/app/modules/detail-product/components/price/price.component.html
@@ -3,14 +3,19 @@
 	<wsv wide="27px"></wsv>
 	<discount-harga-coret></discount-harga-coret>
 	<wsv wide="34px"></wsv>
-	<info-row title="warna">
-		<warna></warna>
-	</info-row>
-	<wsv wide="15px"></wsv>
-	<info-row title="Berat">
-		<span class="info-row-content">2.400gr</span>
-	</info-row>
-	<wsv wide="15px"></wsv>
+	<div>
+		<info-row title="warna">
+			<warna></warna>
+		</info-row>
+		<wsv wide="15px"></wsv>
+	</div>
+	<div>
+		<info-row title="Berat">
+			<span class="info-row-content">2.400gr</span>
+		</info-row>
+		<wsv wide="15px"></wsv>
+	</div>
+
 	<info-row title="Stok">&nbsp;&nbsp;
 		<span class="info-row-content">25</span>
 	</info-row>
