--- a/src/app/modules/request-approval/components/item-list/item-list.component.html
+++ b/src/app/modules/request-approval/components/item-list/item-list.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let item of items">
 	<div class="white-rounded-corner-item-list-cart">
 		<div class="d-flex align-items-center">
-			<cart-item-list redirLink="0"></cart-item-list>
+			<cart-item-list [redirlink]="false"></cart-item-list>
 		</div>
 		<wsv wide="10px"></wsv>
 		<div class="d-flex">
