--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -16,6 +16,7 @@ $abu-abu-gelap-muda: #757575;
 $abu-abu-sesuatu: #a9a9a9;
 $abu-abu-sesuatu-2: #a6a6a6;
 $merah-terang: #F12627;
+$abu-abu-gelap-terang: #5F5F5F;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
