--- a/src/app/modules/request-approval/components/item-list/item-list.component.html
+++ b/src/app/modules/request-approval/components/item-list/item-list.component.html
@@ -1,12 +1,12 @@
 <div *ngFor="let item of items">
 	<div class="white-rounded-corner-item-list-cart">
 		<div class="d-flex align-items-center">
-			<cart-item-list redirLink="0"></cart-item-list>
-		</div>
-		<wsv wide="10px"></wsv>
-		<div class="d-flex">
-			<wsh wide="181px"></wsh>
-			<div id="qty_label">2 barang</div>
+			<cart-item-list redirLink="0">
+				<wsv wide="10px"></wsv>
+				<div class="d-flex">
+					<div id="qty_label">2 barang</div>
+				</div>
+			</cart-item-list>
 		</div>
 	</div>
 	<wsv wide="24px"></wsv>
