--- a/src/app/shared/components/cart-item-list/cart-item-list.component.html
+++ b/src/app/shared/components/cart-item-list/cart-item-list.component.html
@@ -28,5 +28,6 @@
 			<div id="item-list-weight-left">Berat</div>
 			<div id="item-list-weight-right">{{items.itemWeight}}</div>
 		</div>
+		<ng-content></ng-content>
 	</div>
 </div>
