--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.scss
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.scss
@@ -64,3 +64,13 @@
 	z-index: 1000;
 	background-color: #e5e5e5;
 }
+
+#keranjang-label {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 24px;
+	font-feature-settings: 'kern' off;
+
+	color: $abu-abu-gelap;
+}
