update pop up dialog detail image

--- a/src/app/modules/detail-product/components/image-main/image-main.component.html
+++ b/src/app/modules/detail-product/components/image-main/image-main.component.html
@@ -1,7 +1,7 @@
 <div>
 	<div id="image-main"
 		[ngStyle]="stylesObj"
-		(click)="openDialogLocation()">
+		(click)="openDialogImage(imageMainSelected)">
 		<img id="detail-main-image"
 			src={{imageMainSelected}}>
 	</div>
