--- a/src/app/shared/components/dialog-popup-image/dialog-popup-image.component.html
+++ b/src/app/shared/components/dialog-popup-image/dialog-popup-image.component.html
@@ -1,1 +1,4 @@
-<p>dialog-popup-image works!</p>
+<div class="d-flex justify-content-center">
+	<img id="detail-main-image"
+		src={{imageMainSelected}}>
+</div>
