--- a/src/app/modules/cart/components/item-list/item-list.component.html
+++ b/src/app/modules/cart/components/item-list/item-list.component.html
@@ -6,27 +6,41 @@
 
 <wsv wide="16px"></wsv>
 <div *ngFor="let item of items">
-	<div
-		[className]="item.outOfStock? 'out-of-stock white-rounded-corner-item-list-cart' : 'white-rounded-corner-item-list-cart'">
-		<div class="d-flex align-items-center">
-			<check-box-round [checked]="shouldSelectItem(item.outOfStock, item.selected)"
-				(click)="item.selected = !item.selected"
-				[allowChanges]="!item.outOfStock"></check-box-round>
-			<wsh wide="10px"></wsh>
+	<div id="wrapper-1">
+		<div [className]="'white-rounded-corner-item-list-cart'">
+			<div class="d-flex align-items-center">
+				<check-box-round [checked]="shouldSelectItem(item.outOfStock, item.selected)"
+					(click)="item.selected = !item.selected"
+					[allowChanges]="!item.outOfStock"></check-box-round>
+				<wsh wide="10px"></wsh>
 
-			<cart-item-list [redirlink]="true">
-				<div class="d-flex align-items-center">
-					<qty-ctrl notif="false"
-						[allowChanges]="!item.outOfStock"></qty-ctrl>
-					<wsh wide="250px"></wsh>
-					<img id="trash-can"
-						src="../../../../../assets/image/icons/trash_can.png"
-						(click)="deleteItem(dangerTpl)" />
-				</div>
-			</cart-item-list>
+				<cart-item-list [redirlink]="true">
+					<div class="d-flex align-items-center">
+						<qty-ctrl notif="false"
+							[allowChanges]="!item.outOfStock"></qty-ctrl>
+						<wsh wide="250px"></wsh>
+						<img id="trash-can"
+							src="../../../../../assets/image/icons/trash_can.png"
+							(click)="deleteItem(dangerTpl)" />
+					</div>
+				</cart-item-list>
+			</div>
+
 		</div>
-		<wsv wide="16px"></wsv>
+		<div id="wrapper-2"
+			*ngIf="item.outOfStock"></div>
+		<div id="wrapper-3"
+			*ngIf="item.outOfStock">
+			<div id="wrapper-above-layer"
+				class="d-flex">
+				<div id="out-of-stock-label">Out Of Stock</div>
+				<wsh wide="20.39px"></wsh>
+				<img id="trash-can-2"
+					src="../../../../../assets/image/icons/trash_can.png"
+					(click)="deleteItem(dangerTpl)" />
+			</div>
 
+		</div>
 	</div>
 	<wsv wide="24px"></wsv>
 </div>
