--- a/src/app/modules/cart/components/item-list/item-list.component.scss
+++ b/src/app/modules/cart/components/item-list/item-list.component.scss
@@ -9,7 +9,7 @@
 }
 
 .out-of-stock {
-	background: rgba(255, 255, 255, 0.6);
+	background: rgba(255, 255, 255, 0.3);
 	background-blend-mode: soft-light;
 	mix-blend-mode: screen;
 }
@@ -34,4 +34,47 @@
 	font-size: 14px;
 
 	color: #ffffff;
+}
+
+#wrapper-1 {
+	position: relative;
+}
+#wrapper-2 {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: $putih-tok;
+	box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
+	border-radius: 8px;
+	opacity: 0.9;
+	width: 100%;
+	height: 100%;
+}
+#wrapper-3 {
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-radius: 8px;
+	width: 100%;
+	height: 100%;
+}
+
+#trash-can-2 {
+	width: 21px;
+	height: 20.76px;
+}
+
+#wrapper-above-layer {
+	position: absolute;
+	bottom: 23px;
+	right: 44px;
+}
+
+#out-of-stock-label {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 12px;
+
+	color: $color-primary;
 }
