--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.scss
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.scss
@@ -5,6 +5,13 @@
 	position: relative;
 }
 
+#keranjang-label {
+	font-family: $primary-font;
+	font-weight: bold;
+	font-size: 24px;
+	color: $abu-abu-gelap;
+}
+
 #top-fixed {
 	position: fixed;
 }
