--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -1,7 +1,8 @@
 <div ngbDropdown
 	#myDrop="ngbDropdown"
 	class="d-inline-block"
-	(mouseover)="myDrop.open();">
+	(mouseover)="myDrop.open();"
+	(mouseout)="myDrop.close();">
 	<div class="d-flex justify-content-center align-items-center"
 		ngbDropdownToggle>
 		<img id="headers-menubar"
