--- a/src/app/shared/components/qty-ctrl/qty-ctrl.component.html
+++ b/src/app/shared/components/qty-ctrl/qty-ctrl.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between align-items-center control-wrapper">
 	<div id="remove_cart_logo_wrapper"
 		class="d-flex align-items-center"
-		(click)="removeFromCart(dangerTpl)">
+		(click)="removeFromCart()">
 		<img id="remove_cart_logo"
 			src="../../../../../assets/image/icons/remove_card_ic.png">
 	</div>
@@ -10,10 +10,12 @@
 		<input #qty_input
 			id="qty_input"
 			class="p-2"
+			type="text"
 			[(ngModel)]="qty"
-			pattern="\d*"
+			pattern="[\d]{9}"
 			maxlength="6"
 			[attr.disabled]="allowChanges? null : ''"
+			(keypress)="preventAlphabet($event)"
 			(change)="qtyChange()">
 		<div id="horizontal-underline">
 
@@ -22,29 +24,7 @@
 
 	<div id="remove_cart_logo_wrapper"
 		class="d-flex align-items-center"
-		(click)="addToCart(dangerTpl)">
+		(click)="addToCart()">
 		<img id="add_to_cart_logo"
 			src="../../../../../assets/image/icons/add_to_cart_ic.png"></div>
 </div>
-
-
-<ng-template #dangerTpl>
-	<div class="d-flex notif-container justify-content-between align-self-center">
-		<div id="keranjang-label">Keranjang</div>
-		<div id="lihat-keranjang-label"
-			class="text-center">Lihat Keranjang</div>
-	</div>
-	<div id="notif-inner-container">
-		<div class="d-flex justify-content-between align-items-center">
-			<div class="d-flex align-items-center">
-				<img src="https://id.360buyimg.com/Indonesia/s880x0_/nHBfsgAAJAAAAB0AD6waZQACy0M.jpg.dpg.webp"
-					id="notif-img">
-				<div>
-					<div id="item-name">Sweater Merah Pria</div>
-					<div>2 Barang (300gr)</div>
-				</div>
-			</div>
-			<div id="item-price">Rp359.000</div>
-		</div>
-	</div>
-</ng-template>
