--- a/src/app/shared/components/box-cart-price/box-cart-price.component.scss
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.scss
@@ -85,6 +85,21 @@
 	cursor: pointer;
 }
 
+.btn-price-abu2 {
+	width: 100%;
+	height: 36px;
+	background-color: $abu-abu-gelap;
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 16px;
+	align-items: center;
+	text-align: center;
+	color: $putih-tok;
+	cursor: pointer;
+}
+
 .div-btn-next {
 	width: 100%;
 }
