--- a/src/app/modules/cart/components/pilih-semua/pilih-semua.component.html
+++ b/src/app/modules/cart/components/pilih-semua/pilih-semua.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center">
-	<check-box-round [checked]="semuaTerpilih"
+	<check-box-round [checked]="apakahSemuaItemTerpilih()"
 		allowChanges="true"
 		(click)="pilihSemua()"></check-box-round>
 	<wsh wide="12px"></wsh>
