--- a/src/app/modules/detail-product/components/image-main/image-main.component.scss
+++ b/src/app/modules/detail-product/components/image-main/image-main.component.scss
@@ -2,8 +2,10 @@
 @import '../../../../../styles/variables/fonts';
 
 #detail-main-image {
-	width: 328px;
-	height: auto;
+	//width: 328px;
+	//height: auto;
+	width: 348px;
+	height: 349px;
 	border: 0.5px solid $abu-abu-sesuatu;
 	box-sizing: border-box;
 	border-radius: 8px;
