--- a/src/app/modules/detail-product/components/image-main/image-main.component.scss
+++ b/src/app/modules/detail-product/components/image-main/image-main.component.scss
@@ -4,8 +4,9 @@
 #detail-main-image {
 	//width: 328px;
 	//height: auto;
-	width: 300px;
+	width: 349px;
 	height: 349px;
+	object-fit: scale-down;
 	border: 0.5px solid $abu-abu-sesuatu;
 	box-sizing: border-box;
 	border-radius: 8px;
