--- a/src/app/shared/components/dialog-popup-image/dialog-popup-image.component.scss
+++ b/src/app/shared/components/dialog-popup-image/dialog-popup-image.component.scss
@@ -1,6 +1,37 @@
 @import '../../../../styles/variables/colors';
 //@import '../../../../../styles/variables/fonts';
 #detail-main-image {
-	width: 328px;
-	height: auto;
+	width: 349px;
+	height: 349px;
+	object-fit: scale-down;
 }
+
+   .konten-slider{
+	width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 9;
+   }
+  
+
+	.konten-btn-nav{
+	position: absolute;
+	z-index: 100;
+	top : 50%;
+	z-index: 11;
+	}
+
+   .btn-nav{
+	width: 320px;
+   }
+   .btn-nav span {
+      cursor: pointer;
+   }
+
+    .btn_prev{
+		margin-left: -20px;
+	}
+   .buttonnp{
+	   width: 35px;
+	   height: 35px;
+   }
