--- a/src/app/modules/detail-product/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/modules/detail-product/components/breadcrumb/breadcrumb.component.html
@@ -1,16 +1,18 @@
-<div id="breadcrumb-nest">
-	<a class="breadcrumb-link"
-		[routerLink]="['../']">Home</a>
+<div id="breadcrumb-nest"
+	class="d-flex">
+	<div class="breadcrumb-link"
+		[routerLink]="['../']">Home</div>
 	<img src="../../../../../assets/image/icons/arrow.svg"
 		class="arrow-breadcrumb">
-	<a class="breadcrumb-link"
-		[routerLink]="['../pilih-produk']">Fashion Pria</a>
+	<div class="breadcrumb-link"
+		[routerLink]="['../pilih-produk']">Fashion Pria</div>
 	<img src="../../../../../assets/image/icons/arrow.svg"
 		class="arrow-breadcrumb">
-	<a class="breadcrumb-link"
-		[routerLink]="['../pilih-produk']">Outer Pria</a>
+	<div class="breadcrumb-link"
+		[routerLink]="['../pilih-produk']">Outer Pria</div>
 	<img src="../../../../../assets/image/icons/arrow.svg"
 		class="arrow-breadcrumb">
 	<font class="th-produk">
-		<a class="breadcrumb-link">Sweater Pria</a></font>
+		<div class="breadcrumb-link">Sweater Pria</div>
+	</font>
 </div>
