--- a/src/app/shared/components/qty-ctrl/qty-ctrl.component.html
+++ b/src/app/shared/components/qty-ctrl/qty-ctrl.component.html
@@ -1,10 +1,15 @@
 <div class="d-flex justify-content-between align-items-center control-wrapper">
-	<div id="remove_cart_logo_wrapper"
+	<a id="remove_cart_logo_wrapper"
 		class="d-flex align-items-center"
 		(click)="removeFromCart()">
-		<img id="remove_cart_logo"
-			src="../../../../../assets/image/icons/remove_card_ic.png">
-	</div>
+
+		<object id="remove_cart_logo"
+			type="image/svg+xml"
+			data="../../../../../assets/image/icons/remove-logo.svg"
+			[className]="qty==1?'remove_cart_logo_disable':''"
+			class="pointereventnone">
+		</object>
+	</a>
 
 	<div>
 		<input #qty_input
@@ -12,7 +17,6 @@
 			class="p-2"
 			type="text"
 			[(ngModel)]="qty"
-			pattern="[\d]{9}"
 			maxlength="6"
 			[attr.disabled]="allowChanges? null : ''"
 			(keypress)="preventAlphabet($event)"
