--- a/src/app/shared/components/qty-ctrl/qty-ctrl.component.scss
+++ b/src/app/shared/components/qty-ctrl/qty-ctrl.component.scss
@@ -12,6 +12,19 @@
 	height: 4px;
 }
 
+#remove_cart_logo {
+	width: 11px;
+	height: 4px;
+}
+
+.remove_cart_logo_disable {
+	filter: contrast(0%) brightness(150%) saturate(0%);
+}
+
+.pointereventnone {
+	pointer-events: none;
+}
+
 #add_to_cart_logo {
 	width: 11px;
 	height: 11px;
@@ -19,47 +32,6 @@
 
 .control-wrapper {
 	width: 160px !important;
-}
-
-#keranjang-label {
-	font-family: $secondary-font;
-	font-weight: bolder;
-	font-size: 16px;
-}
-
-#lihat-keranjang-label {
-	font-family: $secondary-font;
-	font-weight: bold;
-	font-size: 16px;
-	width: 130px;
-	height: 32px;
-	background: $color-primary;
-	color: #dedede;
-	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-	border-radius: 8px;
-	padding-top: 5px;
-}
-
-.notif-container {
-	width: 350px;
-}
-
-#notif-inner-container {
-	margin-top: 13px;
-	padding-left: 4px;
-	padding-top: 7px;
-	padding-bottom: 10px;
-	padding-right: 12px;
-	width: 350px;
-	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-	border-radius: 8px;
-	background-color: #ffffff;
-}
-
-#notif-img {
-	width: 56px;
-	height: 56px;
-	overflow: hidden;
 }
 
 #qty_input {
