--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -17,6 +17,7 @@ $abu-abu-sesuatu: #a9a9a9;
 $abu-abu-sesuatu-2: #a6a6a6;
 $merah-terang: #F12627;
 $abu-abu-gelap-terang: #5F5F5F;
+$abu-abu-terang-summary: #EEEEEE;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
