--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -1,7 +1,7 @@
 <div id="div-price-top"
 	class="d-flex align-items-center justify-content-between">
 	<div>Kredit Tersedia</div>
-	<div>Rp. 75.000.000</div>
+	<div>Rp. 99.999.999</div>
 </div>
 <div id="div-price-below">
 	<div id="label-ringkasan">Ringkasan belanja</div>
@@ -9,7 +9,7 @@
 	<div id="cr-hr1"></div>
 	<wsv wide="17px"></wsv>
 	<div class="d-flex justify-content-between">
-		<div class="font1">Total Harga Produk</div>
+		<div class="font1">Total Belanja</div>
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp.</div>
 			<div class="font1">73.500.000</div>
@@ -20,7 +20,7 @@
 	<wsv wide="15px"></wsv>
 
 	<div class="d-flex justify-content-between">
-		<div class="font1">Total Ongkos Kirim</div>
+		<div class="font1">Fee</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp.</div>
@@ -28,10 +28,44 @@
 		</div>
 	</div>
 
+	<wsv wide="20px"></wsv>
+	<div id="cr-hr1"></div>
+	<wsv wide="20px"></wsv>
+
+	<div class="d-flex justify-content-between">
+		<div class="font2">Sub Total</div>
+		<div class="d-flex justify-content-between harga-per-item">
+			<div class="font2">Rp.</div>
+			<div class="font2">74.000.000</div>
+		</div>
+	</div>
+
 	<wsv wide="15px"></wsv>
 
 	<div class="d-flex justify-content-between">
-		<div class="font1">Fee</div>
+		<div class="font1">PPN</div>
+
+		<div class="d-flex justify-content-between harga-per-item">
+			<div class="font1">Rp.</div>
+			<div class="font1">7.400.000</div>
+		</div>
+	</div>
+
+	<wsv wide="15px"></wsv>
+
+	<div class="d-flex justify-content-between">
+		<div class="font1">PPH 23</div>
+
+		<div class="d-flex justify-content-between harga-per-item">
+			<div class="font1">Rp.</div>
+			<div class="font1">-148.000</div>
+		</div>
+	</div>
+
+	<wsv wide="15px"></wsv>
+
+	<div class="d-flex justify-content-between">
+		<div class="font1">Total Ongkos Kirim</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp.</div>
@@ -39,19 +73,21 @@
 		</div>
 	</div>
 
-	<wsv wide="15px"></wsv>
-
-	<div class="d-flex justify-content-between">
-		<div class="font2">Total Tagihan</div>
-		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font2">Rp.</div>
-			<div class="font2">75.000.000</div>
-		</div>
-	</div>
 
 	<wsv wide="29px"></wsv>
 	<div id="cr-hr1"></div>
 	<wsv wide="19px"></wsv>
+
+	<div class="d-flex justify-content-between">
+		<div id="label-ringkasan">Grand Total</div>
+
+		<div class="d-flex justify-content-between harga-per-item">
+			<div id="label-ringkasan">Rp.</div>
+			<div id="label-ringkasan">82.252.000</div>
+		</div>
+	</div>
+
+	<wsv wide="15px"></wsv>
 
 	<button type="button"
 		[className]="buttonDisable ? 'btn btn-price-next' : 'btn btn-price-abu2'"
