--- a/src/app/shared/components/box-cart-price/box-cart-price.component.scss
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.scss
@@ -2,7 +2,7 @@
 @import '../../../../styles/variables/fonts';
 
 #div-price-top {
-	background: $color-primary;
+	background: $abu-abu-terang-summary;
 	height: 45px;
 	width: 357px;
 	padding-left: 25px;
@@ -11,7 +11,7 @@
 	font-family: $primary-font;
 	font-weight: bold;
 	font-size: 14px;
-	color: $putih-tok;
+	color: $abu-abu-gelap;
 }
 
 #div-price-below {
@@ -82,6 +82,7 @@
 	align-items: center;
 	text-align: center;
 	color: $putih-tok;
+	border-radius: 36px;
 	cursor: pointer;
 }
 
@@ -97,6 +98,7 @@
 	align-items: center;
 	text-align: center;
 	color: $putih-tok;
+	border-radius: 36px;
 	cursor: pointer;
 }
 
