--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-	<wsv wide="21px"></wsv>
+	<wsv wide="24px"></wsv>
 	<div id="keranjang-label">APPROVAL</div>
-	<wsv wide="10px"></wsv>
+	<wsv wide="7px"></wsv>
 	<div class="d-flex justify-content-center">
 
-		Item SUmmary Dropdown DISISNI
+		<item-summary-dropdown></item-summary-dropdown>
 
 	</div>
 	<wsv wide="30px"></wsv>
