--- a/src/app/shared/components/pop-up-dialog/pop-up-dialog.component.scss
+++ b/src/app/shared/components/pop-up-dialog/pop-up-dialog.component.scss
@@ -22,7 +22,7 @@
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 16px;
-
+	cursor: pointer;
 	color: #ffffff;
 
 	padding-top: 10px;
@@ -40,7 +40,7 @@
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 16px;
-
+	cursor: pointer;
 	color: #ffffff;
 	padding-top: 10px;
 	padding-bottom: 10px;
