--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -14,9 +14,19 @@
 
 	</div>
 	<wsv wide="30px"></wsv>
-	<div>
+	<div class="d-flex align-items-center">
+		<div class="flex-grow-1 d-flex ">
+			<filter-dropdown class="flex-fill"></filter-dropdown>
+			<wsh wide="24px"></wsh>
+			<filter-dropdown class="flex-fill"></filter-dropdown>
+			<wsh wide="24px"></wsh>
+			<filter-dropdown class="flex-fill"></filter-dropdown>
+		</div>
+		<wsh wide="24px"></wsh>
 
-		Filter DISINIASJDKAJSDKAJDKAJDASDJAKDJAJSDKSJK
+		<reset-filter-button class="d-flex align-items-center"></reset-filter-button>
+
+
 	</div>
 
 	<wsv wide="29px"></wsv>
